# Inference-Engine

./: .gitignore  LICENSE  README.md
inference-engine/: Cargo.toml
inference-engine/examples/: animals.rules  family.rules  trading.rules
inference-engine/src/: lib.rs  main.rs  types.rs
inference-engine/src/cli/: mod.rs
inference-engine/src/engine/: backward.rs  forward.rs  mod.rs  unification.rs
inference-engine/src/parser/: grammar.pest  parser.rs
inference-engine/tests/: integration_tests.rs  parser_tests.rs  unification_tests.rs
