[package]
name = "inference-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
